<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp" >
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="55dp" >
		    
	        <Button
		        android:id="@+id/prevbtn"
		        android:layout_width="wrap_content"
		        android:layout_height="55dp"
		        android:text="@string/prev" />
	        
	        <Button
		        android:id="@+id/fullscreenoffbtn"
		        android:layout_width="wrap_content"
		        android:layout_height="55dp"
		        android:text="@string/fullscreenoff" />
	        
	        <Button
		        android:id="@+id/fullscreenonbtn"
		        android:layout_width="wrap_content"
		        android:layout_height="55dp"
		        android:text="@string/fullscreenon" />
	        
	        <Button
		        android:id="@+id/nextbtn"
		        android:layout_width="wrap_content"
		        android:layout_height="55dp"
		        android:text="@string/next" />
	        
	    </LinearLayout>

	    <Button
	        android:id="@+id/timerbtn"
	        android:layout_width="wrap_content"
	        android:layout_height="55dp"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:gravity="center"
	        android:text="@string/start" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/trackpad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:background="@drawable/border" />

</RelativeLayout>
